static/css/style.css
body {
    position: relative;
    left: 0;
    font-family: 'Noto Sans Mono', monospace;
    font-weight: 300;
    font-size: 22px;
    line-height: 54px;
    color: #454545;
    text-decoration: none;
    display: flex;
    justify-items: center;
    flex-wrap: wrap;
    flex-direction: column;
    justify-content: center;
    z-index: -50;
    padding: 0;
    margin-left: 0;
    width: 100vw;
    min-height: 100vh;
    /*  Lined-paper css styles borrowed and then adapted from Emily Gagne article, 
        here: https://codepen.io/ceg9498/post/creating-lined-paper */
    background: repeating-linear-gradient(rgb(245, 245, 245), rgb(245, 245, 245) 50px,#74aac9 51px, #74aac9 53px, rgb(245, 245, 245) 54px);
    /* background: rgb(245, 245, 245); */
}

main {
    display: flex;
    z-index: -50;
    line-height: 54px;
    width: 100vw;
    height: auto;
    /* position: absolute; */
    left: 0;
    top: 22px;
    padding: 0;
    margin-left: 0;
    align-content: flex-start;
    min-height: 100%;
    flex-wrap: wrap;
    margin-top: 95px;
    margin-bottom:  180px;
    /* background: repeating-linear-gradient(rgb(245, 245, 245), rgb(245, 245, 245) 50px,#74aac9 51px, #74aac9 53px, rgb(245, 245, 245) 54px); */
}

/* fonts styling */

.navbar-brand:hover,
a:hover {
    color: #d665ba;
}

a {
    text-decoration: none;
    color: #454545;
    /* padding-right: 18px; */
    z-index: 200;
}

nav > a > h4:hover {
    color: #d665ba;
}

.blue-button a:hover {
    color: white;
}

.blue-text {
    color: #72a9c9;
}

.blue-text:hover {
    color: #d665ba;
}

.pink-text {
    color: #d665ba;
}

/* image styles */

.recipe-thumb {
    margin-top: -4px;
    height: 244px;
    height: 288px;
    width: auto;
    padding: 8px;
    display: flex;
    background-color: rgb(248, 248, 248);
    box-shadow: 0 2px 1px rgba(0,0,0,0.09), 
                0 4px 2px rgba(0,0,0,0.09), 
                0 8px 4px rgba(0,0,0,0.09), 
                0 16px 8px rgba(0,0,0,0.09),
                0 32px 16px rgba(0,0,0,0.09);
}

.recipe-thumb-view-recipe {
    height:380px;
    width:380px;
}

/* card styles */

.recipe-card {
    display: flex;
    flex-direction: column;
    height: auto;
    background: transparent;
    border-left: 1px solid lightpink;
    position: relative;
    top: 240px;
}

.tbc-logo {
    display: flex;
    flex-direction: column;
    margin: auto;
    align-self: center;
    line-height: 54px;
    position: absolute;
    top: 38px;
    left: 0;
    width: 100vw;
    justify-items: center;
}

.tbc-logo h1 {
    font-size: 40px;
    font-weight: 500;
    margin-top: 12px;
}

.tbc-logo-caption {
    margin: 60px auto auto auto;
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: center;
    position: absolute;
    line-height: 54px;
    left: 0;
}

.tbc-logo-caption h3 {
    font-size: 32px;
    text-align: center;
    line-height: 54px;
}

header {    
    display: flex;
    width: 100vw;
    flex-direction: column;
    justify-content: space-between;
    /*  Lined-paper css styles borrowed and heavily adapted from Emily Gagne article, 
        here: https://codepen.io/ceg9498/post/creating-lined-paper */
    background: linear-gradient(rgb(245, 245, 245),rgb(245, 245, 245) 100px, #faa7e3 101px, #d15da7 102px, #d15da7 104px, rgb(245, 245, 245) 105px, rgb(245, 245, 245) 141px);
    height: 155px;
    left: 0;
    padding: 0;
    top: 0;
    position: absolute;
    z-index: 10000;
}

header .container-fluid {
    padding: none;
    margin: 0;
    min-width: 100vw;
    position: absolute;
    left: 0;
    top: 0;
}

.page-content-home {
    margin-top: 40px;
}

.recipe-copy li,
.recipe-copy h4 {
    position: relative;
    top: 12px;
}

.btn {
    display: flex;
    flex-direction: column;
    background: none;
    font-family: 'Noto Sans Mono', monospace;
    font-size: 22px;
    font-weight: 600;
    width: fit-content;
    height: 40px;
    justify-content: center;
    margin: 7px auto;
    border: 1px solid rgb(250, 228, 232);
    z-index: 20;
    background-color: rgba(248, 202, 209, 0.719);
    position: relative;
}

input {
    text-align: center;
    line-height: 54px;
    height: 33px;
    background-color: rgba(250, 235, 237, 0.836);
}

.navbar {
    justify-items: space-between;
    margin: 155px 6px auto auto;
    z-index: 20000;
}

.navbar .navbar-brand {
    justify-self: center;
    height: 126px;
}

.navbar a > h4 {
    color: #454545;
}

.recipe-copy h4,
.recipe-copy ul,
.recipe-copy li {
    line-height: 54px;
    padding: none;
    font-size: 22px;
}

/* Register page */

label {
    color: rgb(48, 113, 134);
}

.card-login,
.card-register {
    z-index: 4;
    display: flex;
    line-height: 54px;
    flex-direction: column;
    justify-items: center;
    width: 100vw;
    margin: 182px auto auto auto;
}

.pink-text {
    color: #d15da7;
    font-size: 24px;
    font-weight: 600;
    display: flex;
    text-align: center;
    justify-content: center;
}

.blue-button {
    background-color: #72a9c9;
    color: white;
    font-weight: 500;
    max-width: 300px;
    margin: 0 auto;
}

.button-box {
    margin-top: -58px;
}

.pink-text:hover {
    color:#454545;
}

input:placeholder-shown {
    border: none;
}

input:placeholder-shown:hover {
    background-color: #dee7ec;
}

input::placeholder {
    color: rgb(156, 156, 156);
    align-content: center;
}

input {
    border: none;
}

select, input {
    margin: 0 auto;

}

.form-row {
    width: 100vw;
    justify-content: center;
    margin-left: 0;
    display: flex;
}

p, li, h2, h3, h4, h5, input, textarea, ul, .row, col, .tbc-links, .tbc-nav-link, * {
    line-height: 54px;
    padding: 0 auto;
    margin: 0 auto;
}

a {
    line-height: 54px;
}

button {
    border: none;
}

button:hover {
    border: none;
}
/* ... */

